k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: survey-api
  namespace: survey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: survey-api
  template:
    metadata:
      labels:
        app: survey-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: survey-api
          image: ghcr.io/souluanf/online-survey-api:latest
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 20
