k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: survey-api
  namespace: survey
spec:
  selector:
    app: survey-api
  ports:
    - port: 80
      targetPort: 8080
