k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: survey-web
  namespace: survey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: survey-web
  template:
    metadata:
      labels:
        app: survey-web
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: survey-web
          image: ghcr.io/souluanf/online-survey-web:latest
          ports:
            - containerPort: 3000
          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: survey-web
  namespace: survey
spec:
  selector:
    app: survey-web
  ports:
    - port: 80
      targetPort: 3000
