k8s/web-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: survey-web
  namespace: survey
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${WEB_HOST}`)
      services:
        - name: survey-web
          port: 80
  tls:
    certResolver: letsencrypt
